k8s/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: webserver
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - name: http
      port: 80
      targetPort: http
